# filetransfer

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
Debug/: Makefile  config.h  config.status  libtool
Debug/src/: Makefile  filetransfer_system
Debug/src/.deps/: filetransfer-system.Po  main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  filetransfer-system.c  filetransfer-system.c~  filetransfer-system.h  filetransfer-system.h~  filetransfer_system.ui  main.c
